--- a/public/documentation.html
+++ b/public/documentation.html
@@ -5,11 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentation</title>
+    <link rel="stylesheet" href="./styles.css" type="text/css">
+  
 </head>
-<body>
+<body class="container">
     <h1>Documentation page</h1>
     <p>This is a server-side component of a “movies” web application which is similar to Netflix. This web
         application will provide users with access to information about different
         movies as requested.</p>
+    <table >
+        <thead class="parameters">
+            <tr>
+                <th>HTTP Method</th>
+                <th>Request</th>
+                <th>URL</th>
+                <th>Request body data format</th>
+                <th>Response body data format</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>GET</td>
+                <td>Get all movie lists</td>
+                <td>'/movies'</td>
+                <td>None</td>
+                <td>Get data array of all movie lists in a JSON format</td>
+            </tr>
+            <tr>
+                <td>GET</td>
+                <td>Get data about a single movie title</td>
+                <td>'/movies/:title'</td>
+                <td>None</td>
+                <td>Get an array of a single movie data in JSON format, based on title entered in the URL parameter. Example: {
+                    title: 'Inglorious Basterds',
+                    director: ['Quentin Tarantino'],
+                    genre: ['War', 'Action'],
+                    yearOfRelease: 2021
+                    }
+                </td>    
+            </tr>
+            <tr>
+                <td>GET</td>
+                <td>Get movie by genre</td>
+                <td>'/genres/:genre'</td>
+                <td>None</td>
+                <td>Get an array of movie by genres in a JSON format</td>
+            </tr>
+            <tr>
+                <td>GET</td>
+                <td>Get data about a movie director</td>
+                <td>'directors/:director'</td>
+                <td>None</td>
+                <td>Get an array of movie director/directors data in a JSON format, based on the director entered in the URL parameter </td>
+            </tr>
+            <tr>
+                <td>POST</td>
+                <td>Allow clients to create account</td>
+                <td>'/users/:newUser'</td>
+                <td>user information is added to the server in a form  style</td>
+                <td>A text message of the client's added information, included with a unique id created by uuid v4 and an extra success message  </td>
+            </tr>
+            <tr>
+                <td>PUT</td>
+                <td>Allow clients to update their client info</td>
+                <td>'/users/:userName'</td>
+                <td>None</td>
+                <td>A text is returned co confirm the updated information in this case the username</td>
+            </tr>
+            <tr>
+                <td>POST</td>
+                <td>Allow clients to add their favourite movies to their library</td>
+                <td>'/movies/:addFavourite'</td>
+                <td>An array of JSON data containing the added movie. Example: { title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family', 'Adventure'], releaseYear: 2016 } </td>
+                <td>An array of the added movie data in JSON format, with a text  confirming added data and an added ID. Example: { <b>id: 79445,</b>  title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family', 'Adventure'], releaseYear: 2016 } </td>
+            </tr>
+            <tr>
+                <td>DELETE</td>
+                <td>Allow clients to remove a movie from their list of favorites</td>
+                <td>'/movies/:movieTitle'</td>
+                <td>None</td>
+                <td>Returns a text confirming which movie that was actually deleted</td>
+            </tr>
+            <tr>
+                <td>DELETE</td>
+                <td>Allow clients to terminate account</td>
+                <td>'/users/:username'</td>
+                <td>None</td>
+                <td>Returns a text confirming user deregistration</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
