changes to index.js and documentation.html

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -39,8 +39,8 @@
                 <td>Get an array of a single movie data in JSON format, based on title entered in the URL parameter. Example: {
                     title: 'Inglorious Basterds',
                     director: ['Quentin Tarantino'],
-                    genre: ['War', 'Action'],
-                    yearOfRelease: 2021
+                    genre: ['Action'],
+                    yearOfRelease: 2009
                     }
                 </td>    
             </tr>
@@ -76,8 +76,8 @@
                 <td>POST</td>
                 <td>Allow clients to add their favourite movies to their library</td>
                 <td>'/movies/:addFavourite'</td>
-                <td>An array of JSON data containing the added movie. Example: { title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family', 'Adventure'], releaseYear: 2016 } </td>
-                <td>An array of the added movie data in JSON format, with a text  confirming added data and an added ID. Example: { <b>id: 79445,</b>  title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family', 'Adventure'], releaseYear: 2016 } </td>
+                <td>An array of JSON data containing the added movie. Example: { title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family'], releaseYear: 2016 } </td>
+                <td>An array of the added movie data in JSON format, with a text  confirming added data and an added ID. Example: { <b>id: 79445,</b>  title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family'], releaseYear: 2016 } </td>
             </tr>
             <tr>
                 <td>DELETE</td>
