--- a/public/documentation.html
+++ b/public/documentation.html
@@ -34,12 +34,23 @@
             <tr>
                 <td>GET</td>
                 <td>Get data about a single movie title</td>
-                <td>'/movies/:title'</td>
+                <td>'/movies/:Title'</td>
                 <td>None</td>
                 <td>Get an array of a single movie data in JSON format, based on title entered in the URL parameter. Example: {
-                    title: 'Inglorious Basterds',
-                    director: ['Quentin Tarantino'],
-                    genre: ['Action'],
+                    Title:"Inglorious Basterds",
+                    Description:"A few Jewish soldiers are on an undercover mission to bring down the Nazi government and put an end to the war. Meanwhile, a woman wants to avenge the death of her family from a German officer.",
+                    Genre: {
+                        Name:"Action",
+                        Description:"Action film is a film genre in which the protagonist is thrust into a series of events that typically involve violence and physical feats.",
+                    },
+                    Director: {
+                        Name:"Quentin Tarantino",
+                        Bio:"Quentin Jerome Tarantino is an American filmmaker, film director, screenwriter, producer, film critic, and actor. His films are characterized by nonlinear storylines, dark humor, stylized violence, foot fetishism, extended dialogue, ensemble casts, references to popular culture, alternate history, and neo-noir.",
+                        Birth:"1963-03-27"
+                    },
+                    Actors: ['Brad Pitt', 'Eli Roth', 'Diane Kruger'],
+                    ImagePath:"https://www.imdb.com/title/tt0361748/mediaviewer/rm3163035648/?ref_=tt_ov_i",
+                    Featured: false,
                     yearOfRelease: 2009
                     }
                 </td>    
@@ -47,49 +58,78 @@
             <tr>
                 <td>GET</td>
                 <td>Get movie by genre</td>
-                <td>'/genres/:genre'</td>
+                <td>'/genres/:genreName'</td>
                 <td>None</td>
-                <td>Get an array of movie by genres in a JSON format</td>
+                <td>Get an array of movie by genres plus the genre description in a JSON format</td>
             </tr>
             <tr>
                 <td>GET</td>
                 <td>Get data about a movie director</td>
-                <td>'directors/:director'</td>
+                <td>'directors/:directorName'</td>
                 <td>None</td>
-                <td>Get an array of movie director/directors data in a JSON format, based on the director entered in the URL parameter </td>
+                <td>Get an array of movie director/directors data in a JSON format, based on the director entered in the URL parameter: Example {
+                    Director: {
+                        Name:"Tatsuo Sato",
+                        Bio:"Tatsuo Satō is a Japanese anime director most famous for Martian Successor Nadesico.",
+                        Birth:"1964-05-07"
+                        Death: if applicable
+                    },
+                    } </td>
+            </tr>
+            <tr>
+                <td>GET</td>
+                <td>Allow for the list of users</td>
+                <td>'/users'</td>
+                <td>user information is returned from the server in a form  style</td>
+                <td>A text message of user information, included with a unique id and an extra success message. Example {
+                    "_id" : ObjectId("61fda65a986730c619143ec3"),
+                    "Username" : "dono321",
+                    "Password" : "donnate",
+                    "Email" : "dona@gmail.com",
+                    "Birthday" : "1992-01-01",
+                    "Favouritemovies" : [ ]
+                    } </td>
+
             </tr>
             <tr>
                 <td>POST</td>
                 <td>Allow clients to create account</td>
-                <td>'/users/:newUser'</td>
+                <td>'/users</td>
                 <td>user information is added to the server in a form  style</td>
-                <td>A text message of the client's added information, included with a unique id created by uuid v4 and an extra success message  </td>
+                <td>A text message of the client's added information, included with a unique id and an extra success message. Example {
+                    "_id" : ObjectId("61fda65a986730c619143ec3"),
+                    "Username" : "newUser",
+                    "Password" : "Password",
+                    "Email" : "newUser@gmail.com",
+                    "Birthday" : "1998-01-01",
+                    "Favouritemovies" : [ ]
+                    } </td>
             </tr>
             <tr>
                 <td>PUT</td>
                 <td>Allow clients to update their client info</td>
-                <td>'/users/:userName'</td>
+                <td>'/users/:Username'</td>
                 <td>None</td>
-                <td>A text is returned co confirm the updated information in this case the username</td>
+                <td>A text is returned to confirm the updated information in this case the username</td>
             </tr>
             <tr>
                 <td>POST</td>
                 <td>Allow clients to add their favourite movies to their library</td>
-                <td>'/movies/:addFavourite'</td>
+                <td>'/users/:Username/movies/:MovieID'</td>
                 <td>An array of JSON data containing the added movie. Example: { title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family'], releaseYear: 2016 } </td>
                 <td>An array of the added movie data in JSON format, with a text  confirming added data and an added ID. Example: { <b>id: 79445,</b>  title: 'Jungle Book', director: ['Jon Favreau'], genre: ['Family'], releaseYear: 2016 } </td>
             </tr>
             <tr>
                 <td>DELETE</td>
                 <td>Allow clients to remove a movie from their list of favorites</td>
-                <td>'/movies/:movieTitle'</td>
+                <td>'/users/:Username/movies/:MovieID'</td>
                 <td>None</td>
                 <td>Returns a text confirming which movie that was actually deleted</td>
             </tr>
             <tr>
                 <td>DELETE</td>
                 <td>Allow clients to terminate account</td>
-                <td>'/users/:username'</td>
+                <td>'/users/:Username'</td>
                 <td>None</td>
                 <td>Returns a text confirming user deregistration</td>
             </tr>
@@ -97,3 +137,4 @@
     </table>
 </body>
 </html>
+
